滥恩問題修復

--- a/畫廊.html
+++ b/畫廊.html
@@ -54,8 +54,8 @@
 					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.jpg" alt="">
 					<div class="BG"></div>
 				</div>
-				<div class="展示項目" 識別符="𫜵恩，停𫜵倅發病">
-					<img src="/assets/圖象/畫廊/𫜵恩，停𫜵倅發病.jpg" alt="">
+				<div class="展示項目" 識別符="滥恩，停滥倅發病">
+					<img src="/assets/圖象/畫廊/滥恩，停滥倅發病.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="仌屍">
