--- a/畫廊.html
+++ b/畫廊.html
@@ -47,15 +47,15 @@
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="驚悚鏡像白目黑白口美羊羊">
-					<img src="/assets/圖象/畫廊/驚悚鏡像白目黑白口美羊羊.jpg" alt="">
+					<img src="/assets/圖象/畫廊/驚悚鏡像白目黑白口美羊羊.JPG" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="貓和老鼠錯亂房間">
-					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.jpg" alt="">
+					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.JPG" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="滥恩，停滥倅發病">
-					<img src="/assets/圖象/畫廊/滥恩，停滥倅發病.jpg" alt="">
+					<img src="/assets/圖象/畫廊/滥恩，停滥倅發病.JPG" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="仌屍">
