jpg JPG png PNG 問題

--- a/畫廊.html
+++ b/畫廊.html
@@ -51,27 +51,27 @@
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="驚悚鏡像白目黑白口美羊羊">
-					<img src="/assets/圖象/畫廊/驚悚鏡像白目黑白口美羊羊.JPG" alt="">
+					<img src="/assets/圖象/畫廊/驚悚鏡像白目黑白口美羊羊.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="貓和老鼠錯亂房間">
-					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.JPG" alt="">
+					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="滥恩，停滥倅發病">
-					<img src="/assets/圖象/畫廊/滥恩，停滥倅發病.JPG" alt="">
+					<img src="/assets/圖象/畫廊/滥恩，停滥倅發病.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="仌屍">
-					<img src="/assets/圖象/畫廊/仌屍.JPG" alt="">
+					<img src="/assets/圖象/畫廊/仌屍.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="栗炭千唯">
-					<img src="/assets/圖象/畫廊/栗炭千唯.JPG" alt="">
+					<img src="/assets/圖象/畫廊/栗炭千唯.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="病禍">
-					<img src="/assets/圖象/畫廊/病禍.JPG" alt="">
+					<img src="/assets/圖象/畫廊/病禍.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="赤目">
@@ -79,11 +79,11 @@
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="ちいかわ">
-					<img src="/assets/圖象/畫廊/ちいかわ.JPG" alt="">
+					<img src="/assets/圖象/畫廊/ちいかわ.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="春日歩持刀可愛核">
-					<img src="/assets/圖象/畫廊/春日歩持刀可愛核.JPG" alt="">
+					<img src="/assets/圖象/畫廊/春日歩持刀可愛核.jpg" alt="">
 					<div class="BG"></div>
 					<canvas class="star"></canvas>
 					<script src="/javascript/畫廊/內用/春日歩持刀可愛核/star.js"></script>
@@ -124,29 +124,29 @@
 					</script>
 				</div>
 				<div class="展示項目" 識別符="灋顯東石">
-					<img src="/assets/圖象/畫廊/灋顯東石.JPG" alt="">
+					<img src="/assets/圖象/畫廊/灋顯東石.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="合息">
-					<img src="/assets/圖象/畫廊/合息.JPG" alt="">
+					<img src="/assets/圖象/畫廊/合息.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="水啚丹它甲骨文">
-					<img src="/assets/圖象/畫廊/水啚丹它甲骨文.JPG" alt="">
+					<img src="/assets/圖象/畫廊/水啚丹它甲骨文.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="天国栗炭千唯">
-					<img src="/assets/圖象/畫廊/天国栗炭千唯.JPG" alt="">
+					<img src="/assets/圖象/畫廊/天国栗炭千唯.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="天に召される">
-					<img src="/assets/圖象/畫廊/天に召される.JPG" alt="">
+					<img src="/assets/圖象/畫廊/天に召される.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="夢">
-					<img src="/assets/圖象/畫廊/夢.JPG" alt="">
+					<img src="/assets/圖象/畫廊/夢.jpg" alt="">
 					<script>
-						let images夢 = ["/assets/圖象/畫廊/夢.JPG", "/assets/圖象/畫廊/夢_1.PNG", "/assets/圖象/畫廊/夢_2.PNG", "/assets/圖象/畫廊/夢_3.PNG"]
+						let images夢 = ["/assets/圖象/畫廊/夢.jpg", "/assets/圖象/畫廊/夢_1.png", "/assets/圖象/畫廊/夢_2.png", "/assets/圖象/畫廊/夢_3.png"]
 						window.startImageCarousel('#展示>.展示項目[識別符="夢"]>img', images夢, 850);
 					</script>
 					<div class="BG"></div>
