--- a/畫廊.html
+++ b/畫廊.html
@@ -66,8 +66,8 @@
 					<img src="/assets/圖象/畫廊/仌屍.jpg" alt="">
 					<div class="BG"></div>
 				</div>
-				<div class="展示項目" 識別符="栗炭千唯">
-					<img src="/assets/圖象/畫廊/栗炭千唯.jpg" alt="">
+				<div class="展示項目" 識別符="栗炭千唯悪靈">
+					<img src="/assets/圖象/畫廊/栗炭千唯悪靈.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="病禍">
