--- a/畫廊.html
+++ b/畫廊.html
@@ -78,6 +78,10 @@
 					<img src="/assets/圖象/畫廊/赤目.png" alt="">
 					<div class="BG"></div>
 				</div>
+				<div class="展示項目" 識別符="木紫雷擊">
+					<img src="/assets/圖象/畫廊/木紫雷擊.jpg" alt="">
+					<div class="BG"></div>
+				</div>
 				<div class="展示項目" 識別符="ちいかわ">
 					<img src="/assets/圖象/畫廊/ちいかわ.jpg" alt="">
 					<div class="BG"></div>
@@ -100,13 +104,13 @@
 								"hue": 20
 							},
 							"canvas": {
-								"width": window.innerWidth,
-								"height": window.innerHeight,
+								"width": window.screen.width,
+								"height": window.screen.height,
 								"interval": -30,
 								"globalAlpha": 0.9,
 								"direction": "down",
-								"x": window.innerWidth,
-								"y": 0 - window.innerHeight,
+								"x": window.screen.width,
+								"y": 0 - window.screen.height,
 							}
 						}
 
@@ -141,6 +145,34 @@
 				</div>
 				<div class="展示項目" 識別符="天に召される">
 					<img src="/assets/圖象/畫廊/天に召される.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="階梯">
+					<img src="/assets/圖象/畫廊/階梯.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="綠色和鏡子">
+					<img src="/assets/圖象/畫廊/綠色和鏡子.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="trollFace泉此方">
+					<div 我是="填充"></div>
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="泉此方ダリット">
+					<img src="/assets/圖象/畫廊/泉此方ダリット.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="泉此方殺赤">
+					<img src="/assets/圖象/畫廊/泉此方殺赤.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="泉此方水図旦佗">
+					<img src="/assets/圖象/畫廊/泉此方水図旦佗.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="不人面泉此方">
+					<img src="/assets/圖象/畫廊/不人面泉此方.jpg" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="夢">
