--- a/打賞我.html
+++ b/打賞我.html
@@ -4,24 +4,35 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
-	<title>聯繫我！</title>
+	<title>打賞我！</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/index/index.js"></script>
+	<script src="/javascript/打賞我/打賞我.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
-	<link rel="icon" s-href="䈎面圖標：聯繫我" type="image/x-icon" />
+	<link rel="icon" s-href="䈎面圖標：打賞我" type="image/x-icon" />
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="/css/聯繫我.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/打賞我.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body class="橫向捲動">
 	<div id='大容器'>
-		阿斯蒂芬
+		<button id="直書語言切換" ＜－＞="＜" onclick="切換語言();">語言</button>
+		<div id="直書介紹">直書介紹</div>
+		<div id="橫書介紹">
+			<h1>DONATE ME!</h1>
+			<p>Donate to me, just because.<br />So I can buy some snacks.</p>
+		</div>
+		<div id="二維碼">
+			<a href="https://qr.alipay.com/fkx12987hkvvamtzzj1pb3c">
+				<img src="/assets/圖象/收款碼/支付寶.jpg"></a>
+			<a href="wxp://f2f0E14lQ8-tXufcWZQYZo4GzHnMOFSIqwB99YJh8gyU-U8">
+				<img src="/assets/圖象/收款碼/微信支付.jpg"></a>
+		</div>
 	</div>
 </body>
 
