--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<a href="/日誌.html">:=&䈎面圖標：日誌&=:　日誌</a><br>
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
 							<a href="/camera.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
-							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
+							<a href="/打賞我.html">:=&䈎面圖標：打賞我&=:　打賞我</a><br>
 							<a href="/wiki.html">:=&WIKI=:　ＷＩＫＩ</a><br>
 							<a href="/畫廊.html">:=&䈎面圖標：畫廊&=:　畫廊</a>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
