映射書文主題色

--- a/apps/映射書文.html
+++ b/apps/映射書文.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.9" />
 	<link rel="icon" href="/assets/圖象/UI/䈎面圖標/映射書文.png" type="image/png" />
 	<!-- ThemeColor -->
-	<meta name="theme-color" content="#688b5e">
+	<meta name="theme-color" content="#779f6b">
 	<!-- iOS 所需的 Meta 標籤 -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#688b5e">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#779f6b">
 	<meta name="apple-mobile-web-app-title" content="映射書文">
 	<link rel="apple-touch-icon" href="/assets/圖象/應用圖標/映射書文.png">
 
