--- a/apps/映射書文.html
+++ b/apps/映射書文.html
@@ -12,6 +12,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#779f6b">
 	<meta name="apple-mobile-web-app-title" content="映射書文">
 	<link rel="apple-touch-icon" href="/assets/圖象/應用圖標/映射書文.png">
+	<link rel="apple-touch-startup-url" href="/apps/映射書文.html">
 
 	<title>映射書文</title>
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
