--- a/apps/映射書文.html
+++ b/apps/映射書文.html
@@ -13,6 +13,11 @@
 	<meta name="apple-mobile-web-app-title" content="映射書文">
 	<link rel="apple-touch-icon" href="/assets/圖象/應用圖標/映射書文.png">
 	<link rel="apple-touch-startup-url" href="/apps/映射書文.html">
+	<script>
+		if ("standalone" in window.navigator && window.navigator.standalone) {
+			window.location.href = '/apps/映射書文.html';
+		}
+	</script>
 
 	<title>映射書文</title>
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
@@ -21,6 +26,7 @@
 	<script src="/apps/映射書文/javascript/映射書文.js"></script>
 
 </head>
+
 
 <body>
 	<h1>映射書文</h1>
