映射書文滾動條樣式

--- a/apps/映射書文.html
+++ b/apps/映射書文.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body>
+<body class="自訂滾動條" 滾動條theme="泉此方綠反轉">
 	<h1>映射書文</h1>
 	<label for="inputText">輸入文本：</label><br>
 	<textarea id="inputText" rows="10" class="自訂滾動條" 滾動條theme="泉此方綠反轉"></textarea><br>
