--- a/index.html
+++ b/index.html
@@ -206,18 +206,20 @@
 		</tbody>
 	</table>
 
-	<div id="ずんだもん">
+	<div id="ずんだもん"
+		style="position: absolute;bottom: -23px;right: 965px;overflow: visible;height: 190px;width: 190px;pointer-events: none;">
 		<script src="/javascript/塊/ずんだもん.js"></script>
 	</div>
+	<script>window.addMobileWarning();</script>
 
 	<!-- FC2計數器 開始 -->
-	<!-- <div 備註="可愛少女舉牌計數器" id="計數器" class="unselectable  undraggable" draggable="false">
+	<div 備註="可愛少女舉牌計數器" id="計數器" class="unselectable  undraggable" draggable="false">
 		<style>
 			#計數器 {
 				writing-mode: horizontal-tb;
-				display: flex;
-				/* position: fixed; */
-				left: 0;
+				/* display: flex; */
+				position: absolute;
+				right: 0;
 				bottom: 0;
 			}
 		</style>
@@ -250,9 +252,8 @@
 			<noscript><img src="https://counter1.fc2.com/counter_img.php?id=89507337" /></noscript> <noscript><img
 					src="https://counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
 		</div>
-	</div> -->
+	</div>
 	<!-- FC2計數器 結束 -->
-	<script>window.addMobileWarning();</script>
 </body>
 
 </html>
