--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/index.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/公共/直書窗格.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body class="自訂滾動條 橫向捲動" 滾動條theme="泉此方綠">
@@ -77,6 +78,7 @@
 							<li><b>宗教</b>也感興趣！</li>
 						</ul>
 					</div>
+					<div></div>
 				</td>
 				<td id="下列" style="overflow: visible;">
 					<div 備註="最近更新日期" class="塊 最近更新日期 unselectable">
