--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
+	<script src="/javascript/公共/直書窗格.js"></script>
 	<link rel="icon" s-href="䈎面圖標：主䈎" type="image/x-icon" />
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
@@ -78,7 +79,19 @@
 							<li><b>宗教</b>也感興趣！</li>
 						</ul>
 					</div>
-					<div></div>
+					<div id="AppsWindow" class="S98Style" S98Type="window">
+						<div class="title-bar">
+							<div class="title-bar-text">ＡＰＰＳ</div>
+							<div class="title-bar-controls">
+								<button aria-label="Minimize"></button>
+								<button aria-label="Maximize"></button>
+								<button aria-label="Close"></button>
+							</div>
+						</div>
+						<div class="window-body">
+							・<a href="/apps/映射書文.html">映射書文</a><br>
+						</div>
+					</div>
 				</td>
 				<td id="下列" style="overflow: visible;">
 					<div 備註="最近更新日期" class="塊 最近更新日期 unselectable">
@@ -209,7 +222,7 @@
 	</table>
 
 	<div id="ずんだもん"
-		style="position: absolute;bottom: -23px;right: 965px;overflow: visible;height: 190px;width: 190px;pointer-events: none;">
+		style="position: absolute;bottom: 0px;right: 965px;overflow: visible;height: 190px;width: 190px;pointer-events: none;">
 		<script src="/javascript/塊/ずんだもん.js"></script>
 	</div>
 	<script>window.addMobileWarning();</script>
@@ -235,13 +248,12 @@
 
 				function 禁用元素及子孫(元素) {
 					Array.from(元素.querySelectorAll('*')).forEach(子元素 => {
-						子元素.style.userSelect = 'none';  // 不可選擇
-						子元素.style.pointerEvents = 'none';  // 不可點擊
+						子元素.style.userSelect = 'none';
+						子元素.style.pointerEvents = 'none';
 						子元素.style.cursor = 'default';
-						子元素.draggable = false;  // 不可拖動
+						子元素.draggable = false;
 					});
 
-					// 也要設置最初的元素
 					元素.style.userSelect = 'none';
 					元素.style.pointerEvents = 'none';
 					元素.draggable = false;
