--- a/apps/映射書文.html
+++ b/apps/映射書文.html
@@ -30,20 +30,22 @@
 	<select id="schemeSelector" onfocus="this.size=6;" onblur="this.size=0;" onchange="this.size=1; this.blur()"
 		class="自訂滾動條" 滾動條theme="泉此方綠反轉">
 		<option value="項：心經">心經</option>
+		<option value="項：道徳經">道徳經</option>
 		<option value="項：數學">數學</option>
+		<option value="項：申論">申論</option>
 		<option value="項：大悲咒">大悲咒</option>
 		<option value="項：佛說">佛說</option>
 		<option value="項：惡">惡</option>
 		<option value="項：大悲咒和心經">大悲咒和心經</option>
 		<!-- <option value="佛說"></option> -->
 	</select>
-	<label for="seed" name="種子">種子：</label>
+	<label for="seed" name="種子"><button onclick="映射書文複製種子()">❏種子</button>：</label>
 	<input id="seed" type="text" value="">
 	<label for="seed" name="隨機值"></label><br>
 	<button onclick="映射書文應用()">生成</button>
-	<button onclick="映射書文複製輸出()">複製輸出</button>
-	<button onclick="映射書文複製用字()">複製用字</button>
-	<button onclick="映射書文複製當䈎()">複製當䈎鏈接</button>
+	<button onclick="映射書文複製輸出()">❏輸出</button>
+	<button onclick="映射書文複製用字()">❏用字</button>
+	<button onclick="映射書文複製當䈎()">❏當䈎鏈接</button>
 	<br>
 	<div readonly id="output" rows="10" class="自訂滾動條" 滾動條theme="泉此方綠反轉"></div>
 	<div id="charSetOutput"></div>
