日誌/映射書文/日誌txt格式化
更新

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 						</div>
 						<div class="window-body">
 							・<a href="/apps/映射書文.html">映射書文</a><br>
+							・<a href="/apps/日誌txt格式化.html">日誌txt格式化</a><br>
 						</div>
 					</div>
 				</td>
