--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
-	<script src="/javascript/公共/直書窗格.js"></script>
+	<!-- <script src="/javascript/公共/直書窗格.js"></script> -->
 	<link rel="icon" s-href="䈎面圖標：主䈎" type="image/x-icon" />
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
