--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</script>
 						</span>
 					</div>
-					<div class="塊">最近項目：<br />个人主䈎的<a href="/畫廊.html" target="_blank">畫廊</a>
+					<div class="塊">最近項目：<br />个人主䈎的<a href="/畫廊.html#薹綠水藍多視目" target="_blank">畫廊</a>
 					</div>
 					<div id="我的䈎面" class="塊 unselectable">
 						<h2>
@@ -130,7 +130,7 @@
 							<a href="/camera.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/打賞我.html">:=&䈎面圖標：打賞我&=:　打賞我</a><br>
 							<a href="/wiki.html">:=&WIKI=:　ＷＩＫＩ</a><br>
-							<a href="/畫廊.html">:=&䈎面圖標：畫廊&=:　畫廊</a>
+							<a href="/畫廊.html#薹綠水藍多視目">:=&䈎面圖標：畫廊&=:　畫廊</a>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
 							<a href="https://github.com/soizo/soizo.github.io">:=&廠商：GITHUB&=:　GITHUB</a><br>
