畫廊的栗炭千唯悪靈再進

--- a/畫廊.html
+++ b/畫廊.html
@@ -70,6 +70,10 @@
 					<img src="/assets/圖象/畫廊/栗炭千唯悪靈.jpg" alt="">
 					<div class="BG"></div>
 				</div>
+				<div class="展示項目" 識別符="栗炭千唯悪靈再進">
+					<img src="/assets/圖象/畫廊/栗炭千唯悪靈再進.png" alt="">
+					<div class="BG"></div>
+				</div>
 				<div class="展示項目" 識別符="病禍">
 					<img src="/assets/圖象/畫廊/病禍.jpg" alt="">
 					<div class="BG"></div>
