--- a/它專/栗炭千唯.html
+++ b/它專/栗炭千唯.html
@@ -19,6 +19,11 @@
 	<!-- <script src="/javascript/公共/絵文字.js"></script> -->
 	<!-- <script src="/javascript/公共/直書窗格.js"></script> -->
 	<link rel="icon" href="/assets/圖象/UI/䈎面圖標/window_red_hilights.ico" type="image/x-icon" />
+	<link rel="preload" href="/它專/栗炭千唯/圖象/栗炭千唯再進本鬼.png" as="image" type="image/png" />
+	<link rel="preload" href="/它專/栗炭千唯/圖象/弟壱玖伍悪靈.png" as="image" type="image/png" />
+	<link rel="preload" href="/它專/栗炭千唯/圖象/不明語言赤字.png" as="image" type="image/png" />
+	<link rel="preload" href="/它專/栗炭千唯/圖象/栗炭千唯黑瘦鬼.png" as="image" type="image/png" />
+	<link rel="preload" href="/它專/栗炭千唯/圖象/栗炭千唯獨眼無顏女.png" as="image" type="image/png" />
 	<!-- <link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" /> -->
 	<!-- <link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
 	<!-- <link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous" /> -->
