--- a/它專/栗炭千唯.html
+++ b/它專/栗炭千唯.html
@@ -44,6 +44,37 @@
 
 <body class="自訂滾動條 橫向捲動" 滾動條theme="">
 	<!-- 新佛曰：菩即嚴菩蜜吶迦喃摩須嚤咤提伏般哆嚩若如聞若闍即波缽嘇耨迦念是彌願陀修摩寂斯心夷斯諦婆吶彌哆劫斯闍聞愍我夷愍嘚嘇空菩降嘇僧哆喼菩摩諸嘇嘚嘇闍薩願亦嘚伏囉即聞亦夷修慧嚩空僧囉菩須囉祗波菩叻喃陀嚩哆嘚嘚缽哆哆嘚兜菩嘚隸念喃夷若須嚤菩菩哆闍所即哆斯陀吶斯諸波夷隸迦缽哆聞寂咒菩哆我斯嘇菩嘚所缽諸嘚蜜嚩缽吽蜜諦波吶須叻降陀即嚩菩咒即隸般兜波叻僧叻伏羅伏耨夷蜜嚩咒心哆心願叻闍宣莊哆嚤叻祗兜尊囉菩所蜜菩耨諦嚤咒咒聞吶彌隸彌嘇斯愍彌喼陀隸心是我願吽咤哆斯嚤我愍斯嘇伏所祗缽兜羅哆嘇薩劫菩咤喃喃咤寂囉吽願咤塞願劫願陀吽亦波哆吶羅喼缽隸嚩嚴兜寂叻咒空須闍薩修闍菩諦迦慧諸諸降塞嚴色降提般喼僧訶聞菩須莊伏吶嘚空寂吶空嚤如須吶嚩兜兜尊嘚塞修莊哆降喃阿哆彌祗咤阿如咒囉吶婆咤伏嚤訶劫缽吶咒阿般寂喼慧須愍塞闍隸諦阿心叻薩喃羅諸羅喃摩若所蜜嘚囉須薩聞若嚤即吽婆即眾叻婆色喃諸塞我嘇寂波波嘇喼慧阿空菩彌阿須喃劫眾我伏吶亦嚩吽菩吽薩迦空念婆吶諸尊菩訶耨諦哆願須兜諦叻須兜波吽羅摩寂蜜喃吶劫心如劫斯迦亦若吽尊塞空諸斯莊念彌陀吶是嚴嚴陀空莊薩愍菩慧空吶喃色寂兜嚴阿慧愍伏嚴是哆喃嚩諦摩即空心哆羅諦愍咤空嘚哆我心是喼隸阿諸缽降眾是喼阿是咤哆愍蜜咒所吶色愍尊叻莊摩宣咤尊劫缽莊陀咒尊修闍缽嘚嚴闍寂願聞須耨咤羅羅阿咒嚩若摩諦祗塞即闍囉祗闍降我菩須修僧薩羅阿喼心嚤夷闍兜願婆喃喃眾嘚須莊所嚩願婆降僧心缽兜彌諸囉闍即喃嘇喼蜜嚤咤耨修喃嚩莊菩吽尊所慧聞聞寂所迦祗嘚咤伏兜迦吶是菩闍波塞耨願嚴空陀闍嚩哆隸波嚴即夷摩若嘚聞吽喼嘚尊慧眾波咤我羅菩訶羅般嘇祗即摩嘚吶寂我劫蜜囉兜迦慧般喼嘚祗若陀般若慧哆嚴嚴塞喃伏嚴尊尊兜喼尊闍陀伏塞阿咒缽嚴嘚嚤隸尊嚤色菩空念尊般波叻叻咤願羅莊嚴空提缽愍訶嚴修菩阿亦囉愍阿空祗喼喃須囉蜜斯亦心喼喃劫宣哆囉菩陀空尊羅陀諦喼降願嚩空婆宣陀聞寂塞宣喃闍諸蜜咒隸尊寂咤喃喼伏念宣眾尊色斯嚴即囉咒吽兜波斯嘚諸吽哆彌伏囉伏囉陀嚴缽伏摩囉宣囉祗色闍嚩祗空僧祗咒色陀缽缽須色嘚喃訶諦訶缽嚴缽咤宣嘇喃莊喃夷陀祗嚩須菩蜜嚴波喃吶伏般蜜薩僧陀色是祗祗眾般慧斯羅波菩嚤劫聞缽迦訶哆伏即願嚤諦訶迦莊迦嚴亦願嘚般嘚即愍缽訶空斯寂摩嚩僧塞寂色吶空修尊諸波婆彌嚴菩若是般修陀色即菩吶迦隸即願婆宣諸嚤迦陀僧愍修喼嚩寂念嚤波塞修嚩祗聞莊咒祗塞阿喼波訶囉訶聞須諦祗咤是僧缽祗彌念塞即斯諦嚤劫嚤摩斯陀喃眾提隸即哆寂彌修色斯囉心喼宣喃嘚陀僧亦薩咒念吽彌嚩祗迦薩嚩陀諦劫薩修斯須蜜寂若囉羅嚴羅亦色所咒願訶缽隸空菩劫喼若尊喼摩若羅哆嘚嚴慧蜜嘚祗喃降伏宣喃缽所亦空諸僧是囉嚩薩如諸宣愍般阿喃喃咤兜愍聞菩夷莊嘇羅耨眾須喃喃吽羅嘇慧斯蜜降蜜降嚤伏喃嚴喃嚤聞陀吽缽哆斯嚴斯薩諦諸聞塞叻喃隸蜜迦僧空眾般喼嚤咤彌空須婆宣眾空羅阿聞嘇囉波訶聞心僧叻菩訶阿伏蜜念咒波嚴宣須叻若眾哆隸吽念慧斯咤僧斯諸囉諸心羅菩囉嚤菩波嘚陀訶夷迦莊闍彌即諸訶寂喼若所彌哆咒咤諸咒嘚嘚亦伏尊咤諸如吽闍囉哆夷吽陀諸愍叻夷羅所叻尊彌缽陀莊斯若須祗願訶須喼愍伏缽羅菩咤陀諸莊吽夷夷斯聞嘚彌叻波吽叻須婆修吽婆祗喼降愍是吽若降須若婆嘇愍降愍缽劫諸菩叻夷喼喃寂薩所喼咒降迦願降伏心薩陀羅念喃叻我須羅眾寂僧薩哆婆眾所須斯願蜜咒心諸心陀迦斯囉耨降斯嘚般如缽寂夷波念兜喼所塞諦亦所耨嘚波吽訶隸咒夷修彌降塞如僧咤嚤心宣伏迦若僧菩我是所菩亦羅嘚兜僧劫哆菩伏諸諦僧迦哆般嘚喼耨闍色眾宣念宣慧夷願宣迦阿所羅願降我喼喼蜜嘇薩慧斯降祗陀心闍眾宣宣喼斯闍囉斯摩亦薩隸囉訶叻蜜迦喼修嘇願祗咒寂空劫吽降須諸願喃色缽劫哆嘇阿是吶修願訶心所吶陀缽降劫哆咤念吽隸兜降嚤缽夷莊波劫陀缽囉念哆喼羅哆如心須如所訶婆塞哆色慧彌若莊哆薩尊所祗嘚闍念迦吽降夷嚩吶羅菩闍斯嚩缽我蜜斯斯愍如喼耨心如須劫叻眾陀叻聞伏嚤缽波嘇宣色劫夷囉嚤訶心迦陀嘚是哆諦薩咒愍陀哆喃諸如喼兜慧亦彌諦所修我咒我羅陀提摩嘚嚴眾羅夷薩喼波嚤叻宣兜劫降斯羅須亦夷喃嚩如聞斯祗咤僧聞僧須願寂所僧念嚤修慧伏僧若摩愍咤婆吽慧摩眾眾咤叻兜諦耨聞斯塞寂陀念即迦陀耨即降囉夷蜜即喃陀耨吽尊訶叻是塞摩闍色羅嘇慧訶是阿吽咤我嘇劫羅色須吽劫般修夷耨降願摩我闍心降愍伏訶修空羅即宣斯闍慧須降訶尊隸伏嚩迦伏阿我缽尊空尊兜修囉叻我般吽斯降波降劫宣囉蜜眾嘚陀哆僧婆哆羅阿亦喃念夷宣嚤蜜空我若空迦吽嚩咒咒慧陀我劫空陀彌亦若婆陀莊囉降諦諸咒聞即僧色兜哆嚤夷菩諦缽婆慧阿即念即吶摩陀伏菩愍降婆即劫喼咒兜尊吽聞兜喃叻諦眾尊哆我彌夷哆願迦咒摩是菩蜜兜薩聞菩諸色亦哆陀囉吽菩尊嚩囉蜜諸耨伏咤婆菩色我阿僧是嘚蜜哆是我聞空嘚咒劫阿愍是彌所吽吽我空聞修祗波須修兜摩祗婆祗修摩迦哆空摩缽阿心愍尊咒薩斯莊聞嚤心須夷般我若嘚願是波嚤尊我闍彌耨薩塞我缽阿降寂若嘚尊吽劫闍陀亦聞夷提亦喃兜喃隸諦訶叻聞嘇斯吽叻薩蜜闍彌諸如陀訶婆嚤宣宣伏塞缽嚴聞祗嘇塞諸亦耨夷祗婆劫劫祗兜如嚤喃摩叻波須伏羅寂波婆即若婆心薩寂喃蜜是劫我嚩摩阿嚤嘚羅哆寂咒修咤薩阿亦修喼所阿愍宣缽摩婆斯色劫心若吶是須訶是降嚴修劫阿哆喃聞亦聞闍咒是愍夷心波隸劫心摩蜜叻兜修僧菩嚤喃蜜提婆夷嚩蜜祗亦羅叻尊我我吶缽波尊我哆訶宣缽阿陀斯亦夷缽薩是諦嚤塞陀咒僧羅隸阿祗色嘚婆伏是色眾吽心心我斯闍夷吶念我咒如迦嘚耨心劫喃菩蜜般叻阿嚤蜜薩隸諦嚤聞是隸斯闍迦宣是彌哆所摩婆亦吶闍嚴哆嘇婆諸咒愍如我吽是諸亦波伏諦斯婆缽伏缽念提若尊吶嚩喼若訶隸喼波叻慧如蜜闍心空嘇如即慧劫隸訶彌祗薩訶嚤諦迦所羅慧哆亦咒彌伏嚴僧我婆彌聞莊咤斯若莊婆諸諦波降念寂阿諸是宣所心吶劫陀若是塞嚤劫寂缽吽莊僧哆嚩菩咤哆莊迦修耨塞叻是喃修空亦劫空諸是祗薩闍斯婆色喼心心尊吶般莊提亦願陀嘚訶伏斯夷摩蜜彌嘚嚩色婆陀隸囉諦祗念哆吽莊薩夷願嚤囉摩聞哆宣嘇宣婆寂咤吽叻薩嚩我心吽吽修彌降僧蜜如塞吽伏陀即薩嚤婆色般訶伏眾波劫念闍隸僧亦嚴嘚莊聞色訶耨喃迦闍彌隸婆是若所阿陀聞空咤慧訶耨亦闍諦兜如吶眾兜哆諸喼是咤須咤色阿嘚般塞諸嘚囉嘚寂隸眾祗嚩祗亦斯寂眾喼波嚩心蜜喼吶喼所陀夷即眾波菩彌隸我宣色我須慧陀色尊彌缽陀嚩劫伏陀諸訶薩諦僧耨羅喃念嚩心斯薩叻尊嘇色念嚴劫摩所囉我祗我宣闍吶菩咤莊諸愍咒彌是劫咒訶寂空兜諦念宣蜜空咤嚴耨吶降吶尊僧吽嚤叻耨寂薩咒咤祗波尊迦我提摩波亦眾劫喼嘇愍嚤修僧缽愍我嘚莊嚩亦聞伏般若闍祗喼劫吽闍諸彌陀哆宣耨彌慧祗諦降隸婆耨隸摩愍修耨願婆莊缽羅哆咤缽吽如愍迦菩願陀劫薩嚩修即蜜嚴亦闍慧薩慧空夷空諸劫耨哆兜嚴心我眾咒摩塞寂菩嘇塞若菩摩嘇咒伏阿囉尊喃須聞訶羅如叻般降嘇蜜諦嚴尊吽尊喼蜜嚩所薩隸薩吶莊咤喃闍波空念吶缽斯摩隸菩宣莊喼夷喃吽我如訶須寂僧喼蜜隸修婆咤般咒祗兜祗宣波般劫心劫蜜諦若咤愍僧尊兜諸囉劫諦是摩色哆波慧闍彌慧慧缽尊陀祗波祗夷伏宣念波空所慧嘇若薩隸阿諦般夷嚴愍嘚嘇嘚摩嘚若咒僧願色諦空叻莊嘚叻降眾慧迦降嚴寂亦嚤摩叻哆尊慧空迦僧祗修闍吽喃祗祗宣喼迦斯色亦眾蜜亦僧願阿嚤嘇缽闍是斯阿吶嚤眾訶羅修迦吶空所慧闍願薩囉嚤即劫念祗闍劫斯般闍祗祗降陀修波訶降羅寂訶須僧嚴斯伏摩喃亦吽降修塞菩嘇嚤羅尊伏降僧喃色陀薩降降嘇缽嘇羅菩願耨嚩咤蜜蜜吶修僧念彌兜阿聞波隸諸所波兜修嚤尊咤祗我彌亦空莊阿摩如哆祗斯隸愍伏吽即諦心嚤如諸莊陀諦波如降所叻彌莊若亦我空耨咤咤即波阿咒摩諦所摩夷喃莊蜜祗尊夷慧蜜嘇囉心嘇劫般隸阿寂喼塞阿耨願宣婆隸吽我嚴眾莊眾諦羅空般吶須塞亦尊寂我莊薩慧尊摩塞吶伏我斯阿我阿亦若咤兜祗諦諸伏聞莊嘚伏迦即若諸聞聞祗阿夷諦彌劫宣塞諦阿修尊囉愍如夷慧摩闍慧波諸喼咒摩婆婆咒囉聞宣吽吶修是即寂吶如菩夷咤喼願是迦嚩塞嘇菩蜜如空心如嘇願迦宣兜彌宣喼阿菩如祗般喼叻若闍伏伏彌色願伏摩哆吶我嘚嘇若摩兜哆所我慧夷陀若慧慧寂般哆降亦陀心亦須祗諸嘇念是缽兜嚩愍僧闍隸伏即缽婆降迦提薩訶兜色慧阿所愍修哆祗莊聞隸若迦彌如劫嚴空般修若斯兜耨塞嚩陀蜜嘇嘇心如劫若諦耨兜即囉咤蜜闍陀缽囉闍嚴須阿若慧波嘇斯若亦諦寂眾咒波囉哆陀摩喃是宣陀羅塞訶夷囉念諦如眾寂是諸提空聞須蜜嚤愍降塞咒是吶祗寂若阿彌耨嚩嚴哆諦陀嘇祗嚴諦諦阿叻吶哆夷是夷菩婆若伏夷宣諦兜嚴我吶嘚耨訶咤羅愍喼隸訶即夷劫耨亦尊降斯薩寂羅般嘇宣寂即亦所空念劫願喼所訶亦囉隸願哆劫如僧僧嘇祗嚤夷菩莊阿喃尊叻嚩嘚叻嚴訶僧念聞若心闍吽心菩如寂祗闍嚴斯慧我嚤眾蜜眾願我僧如咒叻修嚩彌如眾莊般阿隸喼如兜耨缽劫宣若亦兜塞般愍缽隸嚩咒哆嚴是隸如尊波空嚤兜吶須斯叻尊亦嘚斯摩寂蜜耨聞隸咤塞諸念般叻喼慧空降蜜嚤陀祗我如嚤念眾耨闍摩空提嘚諦如吶阿波嚤嚤哆斯眾缽諦囉羅哆嚴尊摩囉僧夷般迦色缽念心缽吶降婆須降諦阿修咒諦咤念慧空吽祗薩波諸薩咒亦耨吶僧心莊嘚迦如波缽劫祗菩嚤慧莊塞劫聞嘚空彌聞羅闍莊亦囉吽摩彌彌愍是嚤隸叻菩寂阿迦空諸咤尊叻嚩缽波吽陀慧般摩喃耨慧夷所莊嚤若亦祗吽若劫心空諸婆喼耨嚤尊陀摩祗莊咒若叻諸蜜隸我所叻降波空蜜耨我所是囉願諸耨愍羅薩如塞宣伏阿訶吽嚴諦陀薩嚴訶夷隸喃是隸我嘚慧婆諦波聞菩耨嘇色訶尊是降須尊蜜耨慧諦願耨耨念是般咤叻嘚兜是嘚即空吽尊寂嘇耨咒迦薩須婆念摩尊亦薩如修婆諸須斯嚴薩咒耨羅婆塞兜咤陀色修兜愍咤祗兜僧哆劫嘇迦須僧囉般莊喼吶夷叻若色眾闍斯如咒聞僧伏我菩劫尊如祗嘇心迦吽空斯劫羅寂喼尊空亦喃所薩闍寂哆夷般嚤兜喼喼羅聞夷喼空宣亦波阿諸吶阿寂色叻是祗嚤是缽婆迦嚩空降嚤嚴般菩嚩菩念囉祗哆薩嚴喃僧須若菩修若訶菩夷嘇夷諦咤彌隸聞波願須斯菩即伏寂波如嚩囉如心斯所嚩咒嘚訶是修聞迦薩嘚薩羅咤眾塞嚩色塞降色迦吽嚩迦婆願陀咒喼蜜嚩阿咒蜜降喼伏斯亦降陀空缽般我陀塞彌宣僧是慧是空夷闍念修塞叻阿彌愍即念伏嚩所愍彌修宣聞咒喼吶寂彌嚤修吶若喼愍蜜喼如隸亦訶所聞陀修塞斯愍彌阿心迦諸即兜夷隸彌嘚薩般兜摩祗咤色嚴咤般夷缽吶莊願寂諸波須如夷須劫眾菩亦宣隸須哆我阿如菩吽咤嘚劫夷慧吶夷吶眾寂叻劫眾願耨波嚤眾諦寂寂阿寂叻寂即婆所缽摩伏咒夷婆喃亦色念哆須伏即菩隸須斯阿咤嘇聞嘚即嚴寂斯吽聞嚴夷彌彌訶宣聞夷祗念羅空咤若諦薩僧菩迦亦夷囉聞斯莊薩迦諦伏闍斯諦即訶迦嚩須嘇嘚般尊即薩亦莊須嘚寂慧菩寂眾伏尊婆耨薩夷我闍阿愍迦色兜婆夷塞諸嚤嘇即愍彌喃我婆聞伏吶嚴須愍空塞須喃嚤囉尊塞波夷僧蜜所叻諸若闍斯耨摩伏願耨是喃阿蜜寂願摩寂如喼須隸隸耨聞如是空修願陀如羅愍婆彌若嚴兜所彌是吶缽降婆修宣修祗隸喃彌嘇蜜囉波寂吽阿聞嘇摩叻祗兜聞愍耨摩摩蜜兜喼莊慧莊兜色提兜叻摩僧夷祗寂愍塞隸嘚諦劫彌須若阿吽眾是莊婆所寂祗羅斯祗彌降劫喃咤咒迦夷迦摩夷摩羅兜嚤即咒劫哆亦如吶寂薩所薩吶心彌是叻般咤波嚴願隸嘚兜蜜莊須叻婆夷蜜彌囉即嚩斯聞夷迦波我須聞聞伏咒叻是嘚諦是須喃須闍婆諦所念叻亦是蜜願陀訶如塞劫亦聞菩嚩吽波如修叻如宣塞缽兜嚤塞所塞嚩咒薩吶迦迦慧般陀諦耨彌嚴般劫諦波若宣嚩摩咒嘇眾修是色宣嘚塞愍嚩眾阿空祗耨叻闍斯缽伏降修須嚩願願愍亦是吶彌嘇是諸諸聞耨宣若嘇哆塞愍修嘚伏摩我諸慧尊祗修蜜僧咤愍寂嚴菩色是叻吽薩寂亦波般嚴即婆波如諦即我亦彌阿嘚般伏陀摩願咒即吽缽嚩我婆寂訶兜叻薩缽嚩缽如叻祗阿眾蜜隸斯阿咤嘇降若諦宣嘚般夷宣婆迦我咒我摩喃莊心嘚降須如吶闍修隸陀蜜愍羅心諦嚤心彌尊修嚤隸隸蜜摩吽喼囉尊伏即婆修蜜即即修波菩闍嚴喃慧聞迦囉闍迦劫哆囉喃夷劫若陀摩哆陀嚤色摩空色寂彌嘚喃般劫空蜜色諸陀伏即吶摩嚤彌所蜜須僧若色婆若寂陀咒亦聞叻如菩菩所諸喃薩夷喃般提眾叻念空囉念念亦迦喃愍彌如祗嘇般咤喃亦若哆若伏即般蜜嘚伏塞吽寂僧菩迦陀蜜喃耨莊叻阿宣阿吶蜜蜜塞所諸降婆囉劫若斯隸般修亦兜嘇提嘚寂修諸眾囉喼蜜菩愍哆夷願伏蜜兜須阿咤色所如空心彌菩吶吽聞須祗蜜陀吶吽蜜降囉僧慧隸彌薩咤陀嘚兜蜜闍咤波眾尊伏蜜須夷咒迦是諸闍陀嘚嘇是若迦波迦訶喼喃願諦耨降修吶色彌祗叻諦若蜜諸心哆寂嚩咤念宣若我聞劫伏愍伏即修須尊嚤哆羅兜修吶喃吽兜婆闍所祗波若吶如咒般是愍宣色摩宣諦所聞夷即亦如兜喼咒波眾陀莊摩耨所亦咤婆兜吶彌吶般喼諸是嘇吽心吶聞婆闍喼蜜叻愍摩如嚩諦吶所寂須缽心隸耨愍訶尊寂薩波喃是哆波阿空祗夷如斯菩婆蜜囉婆心所羅叻兜缽空宣塞般叻降宣咤劫如隸愍須缽如心即喼宣莊摩耨吽空尊吽色菩迦願諦咒色吽薩阿尊嘇兜僧劫空叻降陀吶色提塞嘇婆降色宣菩咤諦嘇尊迦嘇諦菩願阿喼嘚喃所塞寂婆嚴嚩吶蜜般修莊心塞慧空須嚤咤心僧伏嚩訶吶嘚若哆願心愍缽眾色亦哆隸訶修諦降般心祗彌陀修眾須念若空般聞囉所是塞陀若所心羅僧兜叻念如須囉嘇劫伏塞劫喼眾是是囉諸嚴眾嚩伏迦莊若莊若菩喃降菩隸眾訶嚴降念隸嚤陀尊薩僧聞若薩色嘇聞陀婆所嘚慧阿嘇僧菩咒宣嚤蜜咒闍嚩宣莊婆波喼亦如塞嘚嘚念所若陀耨波咒囉缽叻缽咒我即如哆如慧即兜慧若哆即囉夷尊念闍羅哆僧僧嘚吶尊空嚴斯摩是愍如叻斯愍劫聞祗尊嚴愍婆喼缽般宣諸願阿塞菩嚴囉宣闍彌耨陀般我咤喼若夷所如愍嘇迦慧嘚心眾阿羅降嚩莊寂阿陀宣訶嘚隸聞塞亦闍哆念婆嚩婆塞夷願僧是吶闍諦叻須羅亦愍夷夷如嚤叻寂斯嚩聞缽聞愍心耨寂缽蜜迦摩色嚩嚤隸嚴劫陀若塞嚩咒陀即所斯嚤諦色即咤伏嚴願斯闍嚤是須隸是咒喼菩寂若吽伏莊宣塞須莊願陀修劫是諸降陀降我兜阿彌吽若吶聞彌寂聞祗劫若祗嚴菩尊夷蜜兜嘇彌喼降念隸訶隸眾亦須阿蜜空菩若嚤莊斯寂陀宣蜜寂吶空祗阿修咤哆薩亦吽斯吶斯慧嚩修諦嚩斯缽我陀伏須眾嘇缽隸咤修若缽嚩願降缽嚩慧所我夷般如祗念哆若若愍斯若空喼摩劫空尊咒婆亦如吽吽宣諦婆色彌迦喃缽祗慧咒念囉若寂嚩慧咒須嚤愍即伏婆寂所婆咒劫願念空叻是囉婆莊心訶隸我聞缽伏陀亦即劫聞諸咒降我修彌隸哆蜜祗願是僧阿兜叻念莊空菩嚴闍莊願缽吽須心若願眾摩如修空莊叻喃如菩咤蜜祗劫夷色我降眾眾尊所愍夷宣彌阿嚤闍諸亦陀喼彌隸兜吽哆菩嘇般蜜須提念如般諸諦嚩劫塞聞隸叻祗咤祗愍降念闍莊嘇耨宣隸劫伏菩吽諸願波宣隸是伏祗缽祗降哆僧薩波僧摩心迦如宣祗缽慧般願蜜婆空阿哆阿兜薩即咤摩喼若即祗寂囉嚩亦所薩陀羅摩色囉祗嘇莊斯嘚羅訶夷愍願波羅是我劫嚴嚤羅陀嚩莊如喃諸嘚慧慧心諸夷吶夷即念是即亦降喼般缽波阿吶波叻彌吽耨若我缽須嚤如羅眾嚤劫訶般念波若彌訶缽塞囉囉蜜若慧叻是宣宣劫囉劫波慧蜜囉耨若咤慧囉愍是念聞念空須嚴聞陀嚩隸宣嚩心嚤愍降眾隸降喼隸羅聞是伏哆彌斯心隸波喃願嚴尊菩劫是若彌我斯愍心吽哆咤降蜜叻愍咤婆斯寂若願訶嚤咤嚩阿修蜜嚴祗諦祗色囉如願迦祗薩是愍夷哆是諸羅囉嚩哆是阿我若陀嚩斯劫僧咒諦阿迦須我亦訶夷塞如寂闍嚩阿所念哆修祗訶塞喼劫嘚願莊所聞是薩闍咒薩嘇寂劫若須宣伏須念隸阿色即嚩塞即叻夷嘇伏隸迦咒阿喼僧摩慧亦聞劫如薩所斯我若尊塞咤祗波斯迦彌所夷菩寂夷彌耨陀聞羅須彌蜜阿寂心僧諸空斯嚴降宣莊塞愍蜜嘚嚤願慧慧願嚤訶諦叻尊吽嘇是嘚咤若喼尊嘇若念咒心迦摩莊心宣如哆伏斯即波即喼僧哆祗修眾僧波諸耨隸色尊囉僧莊迦叻喃聞叻若薩即祗吶宣寂咒色婆亦哆隸訶僧蜜空夷所嚩伏愍嚤宣嘇陀迦劫婆塞修嚩尊兜彌迦般吶迦蜜吽羅喼修喃阿喼喼嘚隸降羅塞囉聞婆嘚宣僧隸愍斯所是嚴須訶色菩即亦嚩波諸所耨寂塞耨空心囉隸吶莊心迦咤若亦空彌僧嚩寂我阿僧薩諸慧哆耨嘚諸迦諦哆咒咤慧須我缽咒嘚是訶如眾斯迦聞宣莊蜜吽嚩菩迦缽咤降伏劫降叻諦摩嚤諸嘚陀宣喃陀哆劫尊咒心哆嚤嘇祗婆叻斯夷修嘇宣咤囉哆慧斯吽降莊嚤嚩嚩叻是降尊莊吶亦訶宣隸伏如菩吽願叻咤吽須眾兜尊哆嚩羅劫莊缽喼劫耨劫嘚宣心眾嘇哆哆劫咒哆慧尊是眾摩如念空斯吽咤喼愍即須吽嘇波心咒蜜心塞夷摩彌所摩囉闍隸耨薩叻愍伏菩尊咤喃慧哆亦色囑 -->
+	<audio id="栗炭千唯你別笑" autoplay loop preload="metadata">
+		<source src="/它專/栗炭千唯/音頻/栗炭千唯你別笑.mp3" type="audio/mp3">
+	</audio>
+	<script>
+		var 栗炭千唯你別笑 = document.getElementById('栗炭千唯你別笑');
+		栗炭千唯你別笑.volume = 0.1;
+		// 嘗試自動播放
+		var 栗炭千唯你別PlayPromise = 栗炭千唯你別笑.play();
+
+		if (栗炭千唯你別PlayPromise !== undefined) {
+			栗炭千唯你別PlayPromise.then(_ => {
+				// 自動播放開始時執行
+				console.log("Audio is playing automatically.");
+			}).catch(error => {
+				// 自動播放失敗時執行
+				console.log("Auto-play was prevented. Waiting for interaction.");
+				// 監聽鼠標移動或按鍵事件
+				document.addEventListener('keydown', 栗炭千唯你別PlayAudio);
+				document.addEventListener('mousemove', 栗炭千唯你別PlayAudio);
+				document.body.addEventListener('click', 栗炭千唯你別PlayAudio);
+			});
+		}
+
+		function 栗炭千唯你別PlayAudio() {
+			栗炭千唯你別笑.play();
+			// 移除事件監聽，避免重複播放
+			document.removeEventListener('keydown', 栗炭千唯你別PlayAudio);
+			document.removeEventListener('mousemove', 栗炭千唯你別PlayAudio);
+			document.body.removeEventListener('click', 栗炭千唯你別PlayAudio);
+		}
+	</script>
 	<div id="圖後">
 		<div id="背景文字">
 			<div>
