--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
+	<script src="/javascript/index/假电腦.js"></script>
 	<!-- <script src="/javascript/公共/直書窗格.js"></script> -->
 	<link rel="icon" s-href="䈎面圖標：主䈎" type="image/x-icon" />
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" />
@@ -23,6 +24,7 @@
 	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/index.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/公共/直書窗格.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/index/假电腦.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body class="自訂滾動條 橫向捲動" 滾動條theme="泉此方綠">
@@ -79,9 +81,35 @@
 							<li><b>宗教</b>也感興趣！</li>
 						</ul>
 					</div>
+					<div>
+						<div id="假电腦">
+							<img 識別符="电腦框" src="/assets/圖象/UI/index/电腦/电腦框.png"></img>
+							<img 識別符="电腦屏幕" src="/assets/圖象/UI/index/电腦/电腦屏幕.png" alt="">
+							<div 識別符="桌面圖標" class="橫向捲動">
+								<div 識別符="單桌面圖標">
+									<a href="/apps/映射書文.html" target="_blank">
+										<img 識別符="單桌面圖標圖標" draggable="false" src="/assets/圖象/UI/䈎面圖標/映射書文.png" alt="">
+										<div 識別符="單桌面圖標字">映射書文</div>
+									</a>
+								</div>
+								<div 識別符="單桌面圖標">
+									<a href="/apps/日誌txt格式化.html" target="_blank">
+										<img 識別符="單桌面圖標圖標" draggable="false" src="/assets/圖象/UI/䈎面圖標/日誌txt格式化.png" alt="">
+										<div 識別符="單桌面圖標字">日誌txt格式化</div>
+									</a>
+								</div>
+							</div>
+							<div 識別符="桌面底欄">
+								<button>
+									<img src="/assets/圖象/UI/index/电腦/start-button.png" alt="" draggable="false">
+								</button>
+							</div>
+							<img 識別符="桌面" src="/assets/圖象/UI/index/电腦/电腦桌面.png"></img>
+						</div>
+					</div>
 					<div id="AppsWindow" class="S98Style" S98Type="window">
 						<div class="title-bar">
-							<div class="title-bar-text">ＡＰＰＳ</div>
+							<div class="title-bar-text">它專</div>
 							<div class="title-bar-controls">
 								<button aria-label="Minimize"></button>
 								<button aria-label="Maximize"></button>
@@ -89,8 +117,8 @@
 							</div>
 						</div>
 						<div class="window-body">
-							・<a href="/apps/映射書文.html">映射書文</a><br>
-							・<a href="/apps/日誌txt格式化.html">日誌txt格式化</a><br>
+							・<a href="/它專/栗炭千唯.html">栗炭千唯</a><br>
+							・<a href="/它專/書書書.html">書書書</a><br>
 						</div>
 					</div>
 				</td>
