--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							</script>
 						</span>
 					</div>
-					<div class="塊">最近項目：<br />个人主䈎的<a href="/畫廊.html#薹綠水藍多視目" target="_blank">畫廊</a>
+					<div class="塊">最近項目：<br /><a href="#AppsWindow">它專</a>
 					</div>
 					<div id="我的䈎面" class="塊 unselectable">
 						<h2>
