--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 							<a href="https://soundcloud.com/files-killer">:=&廠商：音云&=:　音云</a><br>
 							<a
 								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
-							<div class="解釋 unselectable" 解釋="目歬没有展示號
-煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　<span class="失效鏈接">嗶哩嗶哩</span></div>
+							<div class="unselectable">:=&廠商：嗶哩嗶哩&=:　<a href="https://space.bilibili.com/3546692607543866">嗶哩嗶哩</a>
+							</div>
 							<div class="解釋 unselectable" 解釋="目歬没有作品">:=&廠商：Acfun&=:　<a
 									href="https://www.acfun.cn/u/75196779">Acfun</a></div>
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
